Handle ES3 Sampler types in getUniform in WebGL2RenderingContext

BUG=679156
TEST=https://github.com/KhronosGroup/WebGL/pull/2248
R=kbr@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2626543002
Cr-Commit-Position: refs/heads/master@{#442429}

Former-commit-id: c281383a4a0459271ea2a258c4e1a5262fa30f78